--- a/project_1/generator/app/src/main/res/layout/grocery_item.xml
+++ b/project_1/generator/app/src/main/res/layout/grocery_item.xml
@@ -8,45 +8,90 @@
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="12dp">
-
-        <ImageView
-            android:id="@+id/groceryImage"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:scaleType="fitCenter"/>
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/groceryTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/groceryCategory"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:layout_gravity="top|start"
+            android:gravity="center"
+            android:padding="4dp"
+            android:rotation="-45"
+            android:translationX="-30dp"
+            android:translationY="20dp"
+            android:textSize="14sp"
             android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginTop="18dp"
-            android:layout_marginBottom="0dp"
-            android:gravity="center"
-            android:paddingBottom="8dp"/>
+            android:background="@android:color/holo_orange_light"
+            android:textColor="@android:color/black" />
 
-        <TextView
-            android:id="@+id/groceryPrice"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="8dp"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:padding="12dp"
+            android:layout_marginTop="12dp">
 
-        <Button
-            android:id="@+id/addToCartButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/add_cart_button"
-            android:layout_marginTop="12dp"
-            android:backgroundTint="@android:color/holo_red_dark"
-            android:textColor="@android:color/white"/>
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/groceryImage"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:contentDescription="@string/grocery_image"
+                android:scaleType="fitCenter"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="18dp"
+                android:paddingBottom="8dp" >
+
+                <TextView
+                    android:id="@+id/groceryTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/toggleArrow"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:contentDescription="@string/grocery_description_arrow_down"
+                    android:padding="4dp"
+                    android:src="@drawable/icon_down_button" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/groceryDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="gone"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/groceryPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/addToCartButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/add_cart_button"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@android:color/holo_red_dark"
+                android:textColor="@android:color/white"/>
+        </LinearLayout>
+
+    </FrameLayout>
+
 </androidx.cardview.widget.CardView>
