--- a/project_1/generator/app/src/main/res/layout/grocery_item.xml
+++ b/project_1/generator/app/src/main/res/layout/grocery_item.xml
@@ -61,9 +61,9 @@
                     android:id="@+id/toggleArrow"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:src="@drawable/icon_down_button"
                     android:contentDescription="@string/grocery_description_arrow_down"
-                    android:padding="4dp"
-                    android:src="@drawable/icon_down_button" />
+                    android:padding="4dp" />
             </LinearLayout>
 
             <TextView
