--- a/project_1/client/app/src/main/res/layout/fragment_cart.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_cart.xml
@@ -10,23 +10,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="10dp" />
+
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="0dp"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/searchView">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/spinner_filter" />
+
+                <Spinner
+                    android:id="@+id/category_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textOrder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/spinner_order" />
@@ -63,9 +88,9 @@
             android:id="@+id/lv_total"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:elevation="4dp"
             android:orientation="horizontal"
             android:padding="4dp"
-            android:elevation="4dp"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView">
 
             <TextView
@@ -73,21 +98,19 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/total_value_label"
                 android:padding="10dp"
-                android:textStyle="bold"
+                android:text="@string/total_value_label"
                 android:textSize="20sp"
-                />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_total_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/total_value_default"
                 android:padding="10dp"
-                android:textSize="20sp"
+                android:text="@string/total_value_default"
                 android:textColor="#888888"
-                />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
