--- a/project_1/client/app/src/main/res/layout/dialog_fragment_error.xml
+++ b/project_1/client/app/src/main/res/layout/dialog_fragment_error.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    tools:context=".fragments.feedback.ErrorFragment">
+    tools:context=".dialog.ErrorDialogFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -22,6 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/design_default_color_error"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
             android:src="@android:drawable/stat_notify_error" />
 
         <TextView
