--- a/project_1/client/app/src/main/res/layout/fragment_transactions.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_transactions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.TransactionsFragment">
+    tools:context=".fragments.TransactionsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
