--- a/project_1/client/app/src/main/res/layout/list_item.xml
+++ b/project_1/client/app/src/main/res/layout/list_item.xml
@@ -35,16 +35,17 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:inputType="numberDecimal"
+                android:minHeight="48dp"
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
-                android:textSize="16sp"
+                android:text="@string/product_value"
                 android:textColor="#888888"
-                android:text="@string/product_value"/>
+                android:textSize="16sp" />
 
             <ImageButton
                 android:id="@+id/bt_remove"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:background="#00FFFFFF"
                 app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
