--- a/project_1/client/app/src/main/res/layout/fragment_vouchers.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_vouchers.xml
@@ -104,7 +104,9 @@
                 android:id="@+id/bottom_button_update"
                 style="?attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:padding="0dp"
                 android:text="@string/update" />
         </com.google.android.material.bottomnavigation.BottomNavigationView>
     </androidx.constraintlayout.widget.ConstraintLayout>
